--- a/src/MEGASync/gui/linux/SettingsDialog.ui
+++ b/src/MEGASync/gui/linux/SettingsDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>675</width>
-    <height>684</height>
+    <height>769</height>
    </rect>
   </property>
   <property name="contextMenuPolicy">
@@ -21,8 +21,32 @@
 {
 font-size: 12px;
 background-color: #fafafa; /*colorToken.surface-1*/
-color: #fafafa; /*colorToken.text-primary*/
+color: #000000; /*colorToken.text-primary*/
 }
+
+/*ThemeImage;ToolButtonIcon;bAccount;normal;on;colorToken.icon-primary*/
+/*ThemeImage;ToolButtonIcon;bAccount;normal;off;colorToken.icon-secondary*/
+
+/*ThemeImage;ToolButtonIcon;bBackup;normal;on;colorToken.icon-primary*/
+/*ThemeImage;ToolButtonIcon;bBackup;normal;off;colorToken.icon-secondary*/
+
+/*ThemeImage;ToolButtonIcon;bFolders;normal;on;colorToken.icon-primary*/
+/*ThemeImage;ToolButtonIcon;bFolders;normal;off;colorToken.icon-secondary*/
+
+/*ThemeImage;ToolButtonIcon;bGeneral;normal;on;colorToken.icon-primary*/
+/*ThemeImage;ToolButtonIcon;bGeneral;normal;off;colorToken.icon-secondary*/
+
+/*ThemeImage;ToolButtonIcon;bNetwork;normal;on;colorToken.icon-primary*/
+/*ThemeImage;ToolButtonIcon;bNetwork;normal;off;colorToken.icon-secondary*/
+
+/*ThemeImage;ToolButtonIcon;bNotifications;normal;on;colorToken.icon-primary*/
+/*ThemeImage;ToolButtonIcon;bNotifications;normal;off;colorToken.icon-secondary*/
+
+/*ThemeImage;ToolButtonIcon;bSecurity;normal;on;colorToken.icon-primary*/
+/*ThemeImage;ToolButtonIcon;bSecurity;normal;off;colorToken.icon-secondary*/
+
+/*ThemeImage;ToolButtonIcon;bSyncs;normal;on;colorToken.icon-primary*/
+/*ThemeImage;ToolButtonIcon;bSyncs;normal;off;colorToken.icon-secondary*/
 
 QPushButton
 {
@@ -67,13 +91,12 @@ border-top: 0px;
 border-right: 0px;
 border-bottom: 3px solid #f1f1f1;
 background-color: transparent;
-color: #333333;
+color: #333333; /*colorToken.text-primary*/
 }
 
 #wTabHeader QToolButton:checked
 {
-background-color: #FFFFFF;
-border-bottom: 3px solid #0078D7;
+border-bottom: 3px solid #0078D7; /*colorToken.button-brand*/
 }
 
 #bChangePasswordPic, #bRecoveryKeyPic
@@ -171,9 +194,7 @@ margin-top: 4px;
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">*{
-/*token_background-color: {{surface-1}};*/
-}</string>
+      <string notr="true"/>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <property name="spacing">
@@ -362,7 +383,7 @@ margin-top: 4px;
         </property>
         <property name="icon">
          <iconset resource="../Resources_linux.qrc">
-          <normaloff>:/images/settings-backup.png</normaloff>:/images/settings-backup.png</iconset>
+          <normaloff>:/images/settings-account.png</normaloff>:/images/settings-account.png</iconset>
         </property>
         <property name="iconSize">
          <size>
