SNC-4541 : Updated settings dialog icons.

--- a/src/MEGASync/gui/Resources_linux.qrc
+++ b/src/MEGASync/gui/Resources_linux.qrc
@@ -1495,5 +1495,15 @@
         <file>images/copy@3x.png</file>
         <file>images/copy.png</file>
         <file>images/copy@2x.png</file>
+        <file>images/settings-account.svg</file>
+        <file>images/settings-backup.svg</file>
+        <file>images/settings-backup-off.svg</file>
+        <file>images/settings-folders.svg</file>
+        <file>images/settings-general.svg</file>
+        <file>images/settings-network.svg</file>
+        <file>images/settings-notifications.svg</file>
+        <file>images/settings-shield.svg</file>
+        <file>images/settings-sync.svg</file>
+        <file>images/settings-sync-off.svg</file>
     </qresource>
 </RCC>
