--- a/src/MEGASync/gui/Resources_macx.qrc
+++ b/src/MEGASync/gui/Resources_macx.qrc
@@ -1262,6 +1262,6 @@
         <file>images/copy@2x.png</file>
         <file>images/copy@3x.png</file>
         <file>images/clock_ico@3x.png</file>
-        <file>images/folder.svg</file>
+        <file>images/folder.png</file>
     </qresource>
 </RCC>
