--- a/src/MEGASync/gui/Resources_macx.qrc
+++ b/src/MEGASync/gui/Resources_macx.qrc
@@ -1262,5 +1262,15 @@
         <file>images/copy@2x.png</file>
         <file>images/copy@3x.png</file>
         <file>images/clock_ico@3x.png</file>
+        <file>images/settings-account.svg</file>
+        <file>images/settings-backup.svg</file>
+        <file>images/settings-backup-warn.svg</file>
+        <file>images/settings-folders.svg</file>
+        <file>images/settings-general.svg</file>
+        <file>images/settings-network.svg</file>
+        <file>images/settings-notifications.svg</file>
+        <file>images/settings-shield.svg</file>
+        <file>images/settings-sync.svg</file>
+        <file>images/settings-sync-warn.svg</file>
     </qresource>
 </RCC>
