--- a/src/MEGASync/gui/Resources_win.qrc
+++ b/src/MEGASync/gui/Resources_win.qrc
@@ -1518,6 +1518,8 @@
         <file>images/copy.png</file>
         <file>images/copy@2x.png</file>
         <file>images/copy@3x.png</file>
-        <file>images/folder.png</file>
+        <file>images/icons/folder/synced-folder.png</file>
+        <file>images/icons/folder/synced-folder@2x.png</file>
+        <file>images/icons/folder/synced-folder@3x.png</file>
     </qresource>
 </RCC>
