--- a/src/MEGASync/stalled_issues/gui/macx/StalledIssueHeader.ui
+++ b/src/MEGASync/stalled_issues/gui/macx/StalledIssueHeader.ui
@@ -423,6 +423,22 @@
           <number>0</number>
          </property>
          <item>
+          <widget class="WaitingSpinnerWidget" name="actionWaitingSpinner" native="true">
+           <property name="minimumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QLabel" name="actionMessageIcon">
            <property name="text">
             <string notr="true"/>
@@ -449,6 +465,12 @@
    <class>WordWrapLabel</class>
    <extends>QTextEdit</extends>
    <header>WordWrapLabel.h</header>
+  </customwidget>
+  <customwidget>
+   <class>WaitingSpinnerWidget</class>
+   <extends>QWidget</extends>
+   <header>waitingspinnerwidget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
