--- a/src/MEGASync/stalled_issues/gui/linux/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/linux/StalledIssuesDialog.ui
@@ -411,6 +411,22 @@ background-color: #F3F4F4;
               </widget>
              </item>
              <item>
+              <widget class="StalledIssueTab" name="failedTab">
+               <property name="frameShape">
+                <enum>QFrame::StyledPanel</enum>
+               </property>
+               <property name="title" stdset="0">
+                <string/>
+               </property>
+               <property name="filterCriterion" stdset="0">
+                <UInt>4</UInt>
+               </property>
+               <property name="iconPrefix" stdset="0">
+                <string>solved-issues</string>
+               </property>
+              </widget>
+             </item>
+             <item>
               <widget class="StalledIssueTab" name="solvedIssuesTab">
                <property name="frameShape">
                 <enum>QFrame::StyledPanel</enum>
@@ -422,7 +438,7 @@ background-color: #F3F4F4;
                 <string/>
                </property>
                <property name="filterCriterion" stdset="0">
-                <UInt>4</UInt>
+                <UInt>5</UInt>
                </property>
                <property name="iconPrefix" stdset="0">
                 <string notr="true">solved-issues</string>
