--- a/src/MEGASync/stalled_issues/gui/macx/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/macx/StalledIssuesDialog.ui
@@ -723,7 +723,7 @@ color: #2C5BEB;
                    <cursorShape>PointingHandCursor</cursorShape>
                   </property>
                   <property name="text">
-                   <string/>
+                   <string notr="true"/>
                   </property>
                   <property name="openExternalLinks">
                    <bool>true</bool>
