--- a/src/MEGASync/gui/linux/SettingsDialog.ui
+++ b/src/MEGASync/gui/linux/SettingsDialog.ui
@@ -27,11 +27,15 @@ color: #303233; /*colorToken.text-primary*/
 QGroupBox
 {
 font-weight: bold;
+margin-top: 15px;
 }
 
 QGroupBox::title
 {
 color: #DD1405; /*colorToken.button-brand*/
+subcontrol-origin: margin;
+subcontrol-position: top left;
+padding: 0 15 0 0px;
 }
 
 QCheckBox::indicator
@@ -1262,6 +1266,7 @@ margin-top: 4px;
          <property name="font">
           <font>
            <pointsize>-1</pointsize>
+           <bold>true</bold>
           </font>
          </property>
          <property name="title">
