SAT-1072.Create What´s new dialog

--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -74,5 +74,14 @@
         <file>images/qml/sync_exclusions/extension.svg</file>
         <file>images/qml/sync_exclusions/chevron-down.svg</file>
         <file>images/qml/sync_exclusions/info.svg</file>
+        <file>images/qml/rocket.png</file>
+        <file>images/qml/rocket@2x.png</file>
+        <file>images/qml/rocket@3x.png</file>
+        <file>images/qml/controls.png</file>
+        <file>images/qml/controls@2x.png</file>
+        <file>images/qml/controls@3x.png</file>
+        <file>images/qml/mega-cloud.png</file>
+        <file>images/qml/mega-cloud@2x.png</file>
+        <file>images/qml/mega-cloud@3x.png</file>
     </qresource>
 </RCC>
